--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-      "swiftmailer/swiftmailer": "@stable"
-    "google/recaptcha": "~1.1"
+      "swiftmailer/swiftmailer": "@stable",
+       "google/recaptcha": "~1.1"
   }
 }
